tests/struct/duplicate_field.rev
struct Foo {
    a: int
    a: int // error: a field with the same name as already been declared in this scope
}
